file type answers, file database and initial implementation (post file first, attach to answer next)
